package subway

data class Connection(val station1: Station, val station2: Station, val lineName: String)
