@startuml

class SubwayLoader {
    subway: Subway
    + loadFromFile(File)
}

class Subway {
    + addStation(String)
    + hasStation(String): Boolean
    + addConnection(String, String, String)
    + hasConnection(String, String, String): Boolean
    + addToNetwork(Station, Station)
    + getDirections(String, String): List<Connection>
    + getConnection(Connection, Connection): Connection
}

class Station {
    - name
    + getName(): String
    + equals(Object): Boolean
    + hashCode(): int
}

class Connection {
    - station1
    - station2
    - lineName
    + getStation1(): String
    + getStation2(): String
    + getLineName(): String
}

class SubwayPrinter {
    + printDirections(List<Connection>)
}

SubwayLoader --> Subway

Subway --> Station
Subway --> Connection

@enduml